copmleted matplotlib practice

--- a/matplotlib_practice.ipynb
+++ b/matplotlib_practice.ipynb
@@ -6,19 +6,16 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'matplotlib'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-ab1083f2edde>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mmatplotlib\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mmonths\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\"Jan\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Feb\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Mar\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Apr\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"May\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Jun\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Jul\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Aug\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Sep\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Oct\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Nov\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Dec\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib'"
-     ]
+     "data": {
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x433fbd0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "import matplotlib\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
     "months = [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"]\n",
@@ -34,23 +31,28 @@
     "\n",
     "\n",
     "# create your figure here\n",
-    "plt.figure(figsize=(12,8)) # creates a 12 x 8 figure\n",
-    "ax1 = plt.subplot(1,2,1) # creates two side-by-side subplots\n",
-    "plt.plot(x_values, visits_per_month, marker='o') # plots visits by month\n",
-    "plt.xlabel(months) # labels x axis with month names\n",
-    "plt.ylabel('page visits') # labels y axis with page visits\n",
-    "plt.title('Page visits per month') \n",
+    "plt.figure(figsize=(12,8))\n",
+    "ax1 = plt.subplot(1,2,1)\n",
+    "plt.plot(x_values, visits_per_month, marker='o')\n",
+    "plt.xlabel(months)\n",
+    "plt.ylabel('page visits')\n",
+    "plt.title('Page visits per month')\n",
     "plt.xticks(x_values)\n",
     "\n",
     "ax2 = plt.subplot(1,2,2)\n",
     "p1 = plt.plot(x_values, key_limes_per_month, color='green')\n",
     "p2 = plt.plot(x_values, persian_limes_per_month, color='orange')\n",
     "p3 = plt.plot(x_values, blood_limes_per_month, color='red')\n",
+    "\n",
     "plt.xlabel(months)\n",
+    "ax2.set_xticks(x_values)\n",
+    "ax2.set_xticklabels(months)\n",
     "plt.ylabel('number of limes')\n",
     "plt.title('Limes Per Month')\n",
-    "ax2.legend()\n",
-    "plt.show()\n"
+    "legend_labels = ['Key lime', \"Persian lime\", \"Blood lime\"]\n",
+    "plt.legend(legend_labels,loc=9)\n",
+    "plt.show()\n",
+    "plt.savefig('page_visits_limes.png')"
    ]
   },
   {
